--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html lang="pt-br">
+<%- include('partials/head') %>
+<body>
+  <div class="container">
+    <h2 class="text-center">portifolio</h2>
+  </div>
+<%- include('partials/footer') %>
+</body>
 </html>
