--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <%- include('partials/head') %>
 <body>
+  <%- include('partials/header')  %>
   <div class="container">
     <h2 class="text-center">portifolio</h2>
   </div>
