session descrição e galeria

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,9 +3,37 @@
 <%- include('partials/head') %>
 <body>
   <%- include('partials/header')  %>
-  <div class="container">
-    <h2 class="text-center">portifolio</h2>
-  </div>
-<%- include('partials/footer') %>
+  <main>
+    <section class="section-description">
+      <div class="div-description container">
+        <h4>Developer Web Full Stack</h4>
+        <div class="bt-description-border">
+          <a href="#" >Projects</a>
+        </div>
+      </div>
+    </section>
+    <section class="section-gallery">
+      <div class="container">
+        <div class="gallery">
+          <div class="gallery-item">
+            <img src="/images/projects/ecommerce_home.png" alt="img">
+          </div>
+          <div class="gallery-item">
+            <img src="/images/projects/ecommerce_home.png" alt="img">
+          </div>
+          <div class="gallery-item">
+            <img src="/images/projects/ecommerce_home.png" alt="img">
+          </div>
+          <div class="gallery-item">
+            <img src="/images/projects/ecommerce_home.png" alt="img">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-user">
+      
+    </section>
+  </main>
+  <%- include('partials/footer') %>
 </body>
 </html>
