--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -31,7 +31,21 @@
       </div>
     </section>
     <section class="section-user">
-      
+      <div class="container user-resume">
+        <div class="skils">
+          <span>Java Script</span>
+          <span>MySql Server</span>
+          <span>Node</span>
+          <span>API API-REST</span>
+          <span>HTML</span>
+          <span>CSS</span>
+          <span>UX / UI</span>
+          <span>SCRUM</span>
+        </div>
+        <div class="user-avatar">
+          <img src="/images/user/avatar-icon.png" alt="user-img">
+        </div>
+      </div>
     </section>
   </main>
   <%- include('partials/footer') %>
