--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,51 +3,49 @@
 <%- include('partials/head') %>
 <body>
   <%- include('partials/header')  %>
-  <main>
-    <section class="section-description">
-      <div class="div-description container">
-        <h4>Developer Web Full Stack</h4>
-        <div class="bt-description-border">
-          <a href="#" >Projects</a>
+  <div class="wrapper">
+    <main>
+      <section class="module parallax parallax-1">
+        <div class="parallax-item container">
+          <h1>Developer web full stack</h1>
         </div>
-      </div>
-    </section>
-    <section class="section-gallery">
-      <div class="container">
-        <div class="gallery">
-          <div class="gallery-item">
-            <img src="/images/projects/ecommerce_home.png" alt="img">
-          </div>
-          <div class="gallery-item">
-            <img src="/images/projects/ecommerce_home.png" alt="img">
-          </div>
-          <div class="gallery-item">
-            <img src="/images/projects/ecommerce_home.png" alt="img">
-          </div>
-          <div class="gallery-item">
-            <img src="/images/projects/ecommerce_home.png" alt="img">
+      </section>
+      
+      <section class="module content">
+        <div class="container">
+          <h2>Meus projetos</h2>
+          <div class="gallery">
+
+            <div class="gallery-item">
+              <img src="/images/projects/ecommerce_home.png" alt="livraria-pagina-inicial" width="400px" height="200px">
+            </div>
+            
+            <div class="gallery-item">
+              <img src="/images/projects/ecommerce_product.png" alt="livraria-layout-interno-produto" width="400px" height="200px">
+            </div>
+
+            <div class="gallery-item">
+              <img src="/images/projects/ecommerce_home.png" alt="livraria-pagina-inicial" width="400px" height="200px">
+            </div>
+            
+            <div class="gallery-item">
+              <img src="/images/projects/ecommerce_product.png" alt="livraria-layout-interno-produto" width="400px" height="200px">
+            </div>
+            
+            <div class="gallery-item">
+              <img src="/images/projects/ecommerce_home.png" alt="livraria-pagina-inicial" width="400px" height="200px">
+            </div>
+            
+            <div class="gallery-item">
+              <img src="/images/projects/ecommerce_product.png" alt="livraria-layout-interno-produto" width="400px" height="200px">
+            </div>
+
           </div>
         </div>
-      </div>
-    </section>
-    <section class="section-user">
-      <div class="container user-resume">
-        <div class="skils">
-          <span>Java Script</span>
-          <span>MySql Server</span>
-          <span>Node</span>
-          <span>API API-REST</span>
-          <span>HTML</span>
-          <span>CSS</span>
-          <span>UX / UI</span>
-          <span>SCRUM</span>
-        </div>
-        <div class="user-avatar">
-          <img src="/images/user/avatar-icon.png" alt="user-img">
-        </div>
-      </div>
-    </section>
-  </main>
+      </section>
+
+    </main>
+  </div>
   <%- include('partials/footer') %>
 </body>
 </html>
