--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,10 @@
 *{
-     box-sizing: border-box;
+    box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: sans-serif;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 :root{
     --bg-dark: #000000;
