adicionando session de skils

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -31,13 +31,39 @@
             <div class="gallery-item">
               <img src="/images/projects/ecommerce_product.png" alt="livraria-layout-interno-produto" width="400px" height="200px">
             </div>
-            
+
             <div class="gallery-item">
               <img src="/images/projects/ecommerce_home.png" alt="livraria-pagina-inicial" width="400px" height="200px">
             </div>
             
             <div class="gallery-item">
               <img src="/images/projects/ecommerce_product.png" alt="livraria-layout-interno-produto" width="400px" height="200px">
+            </div>
+
+          </div>
+        </div>
+      </section>
+
+      <section class="module parallax parallax-2">
+        <div class="parallax-item container">
+          <h2>Habilidades e metodologias ágeis</h2>
+        </div>
+      </section>
+
+      <section class="module content">
+        <div class="container">
+          <div class="resume">
+            <div class="skills">
+              <span>Java Script</span>
+              <span>Node js</span>
+              <span>MySQL</span>
+              <span>HTML 5</span>
+              <span>CSS 3</span>
+              <span>BootsTrap</span>
+              <span>API / API-REST</span>
+              <span>MVC</span>
+              <span>CRUD</span>
+              <span>Scrum</span>
             </div>
 
           </div>
