--- a/public/css/home.css
+++ b/public/css/home.css
@@ -54,6 +54,13 @@ section.module.parallax-1{
     background-attachment: fixed;
 }
 
+section.module.parallax-2{
+background-image: url('https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 section.module.parallax::after{
     content: '';
     height: 100%;
@@ -64,7 +71,18 @@ section.module.parallax::after{
 }
 
 /*section content config*/
-section.module h2{
+.parallax-item h2{
+    color: var(--color-h2);
+    background-color: rgba(0,0,0,.5);
+    height: 300px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
+    box-shadow: 0 0 15px #000;
+    text-transform: uppercase;
 }
 
 /*gallery items config*/
@@ -84,5 +102,28 @@ section.module h2{
 .gallery-item img {
     width: 100%;
     padding: 5px;
+}
 
+/*style skills*/
+.resume{
+    height: 100vh;
+}
+.skills{
+    border: solid 1px #000;
+    min-height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding:15px;
+}
+.skills span{
+    padding: 0 25px;
+    cursor: pointer;
+    border-bottom: rgba(0,0,0,0) solid 1px;
+    text-transform: uppercase;
+    font-weight: 900;
+}
+.skills span:hover{
+    border-bottom: rgba(0,0,0,1) solid 1px;
 }
