subindo gravação do projeto e descrição

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,67 +11,147 @@
         </div>
       </section>
       
-      <section class="module content">
+      <section class="module content box-carousel">
         <div class="container">
-          <h2>Meus projetos</h2>
-          <div class="gallery">
+            <div>
+              <h2>Project Ecommerce</h2>
+            </div>
+            <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              </div>
+              <div class="carousel-inner">
+                
+                <div class="carousel-item active">
+                  <div class="container c-item">
+                    <div class="c-img">
+                      <img src="/images/projects/home.png" alt="">
+                    </div>
+                  </div>
+                </div>
 
-            <div class="gallery-item">
-              <img src="/images/projects/ecommerce_home.png" alt="livraria-pagina-inicial" width="400px" height="200px">
-            </div>
-            
-            <div class="gallery-item">
-              <img src="/images/projects/ecommerce_product.png" alt="livraria-layout-interno-produto" width="400px" height="200px">
-            </div>
+                <div class="carousel-item ">
+                  <div class="container c-item">
+                    <div class="c-img">
+                      <img src="/images/projects/cart.png" alt="">
+                    </div>
+                  </div>
+                </div>
 
-            <div class="gallery-item">
-              <img src="/images/projects/ecommerce_home.png" alt="livraria-pagina-inicial" width="400px" height="200px">
-            </div>
-            
-            <div class="gallery-item">
-              <img src="/images/projects/ecommerce_product.png" alt="livraria-layout-interno-produto" width="400px" height="200px">
-            </div>
+                <div class="carousel-item ">
+                  <div class="container c-item">
+                    <div class="c-img">
+                      <img src="/images/projects/profile.png" alt="">
+                    </div>
+                  </div>
+                </div>
 
-            <div class="gallery-item">
-              <img src="/images/projects/ecommerce_home.png" alt="livraria-pagina-inicial" width="400px" height="200px">
-            </div>
-            
-            <div class="gallery-item">
-              <img src="/images/projects/ecommerce_product.png" alt="livraria-layout-interno-produto" width="400px" height="200px">
-            </div>
+                <div class="carousel-item ">
+                  <div class="container c-item">
+                      <div class="c-img">
+                        <img src="/images/projects/manager.png" alt="">
+                      </div>
+                  </div>
+                </div>
 
-          </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+            <div class="project-description">
+              <div>
+                  <h2>Leve Livros</h2>
+                <p>Desenvolvido para similar um e-commerce com todas as funcionalidades e acessibilidade visando o usuário final do produto, um projeto simple e eficaz consumindo API de terceiros e próprias. Visualizando o código fonte no GIT HUB verá que todo o projeto foi bem desenvolvido se beneficia das praticas mais requeridas pelo mercado de trabalho como 'clean code' e outros</p>
+              </div>
+              <div class="box-description p-4">
+                <h3>Resumo das feramentas e linguagens usadas neste projeto</h3>
+                <div class="box-language">
+                  <div class="centralize p-2">
+                    <h4>Linguagem de programação</h4>
+                    <div class="list-library border p-3">
+                      <p>Java Script</p>
+                      <p>MySQL Server</p>
+                    </div>
+                  </div>
+                  <div class="centralize p-2">
+                    <h4>Desenvolvimentos</h4>
+                    <div class="list-library border p-3">
+                      <p>HTML 5</p>
+                      <p>CSS 3</p>
+                      <p>EJS</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="centralize p-2">
+                  <h4>Bibliotecas consumidas</h4>
+                  <div class="list-library border p-3">
+                    <p>Express generator</p>
+                    <p>Jwt token</p>
+                    <p>Bcrypt</p>
+                    <p>Express validator</p>
+                    <p>Multer</p>
+                    <p>Sequelize</p>
+                    <p>Method override</p>
+                    <p>Https errors</p>
+                    <p>Moment</p>
+                    <p>Sequelize cli</p>
+                    <p>Fetch</p>
+                    <p>Bootstrap 5.1</p>
+                    <p>API via cep</p>
+                    <p>API mercado pago</p>
+                  </div>
+                </div>
+                <div class="centralize p-2">
+                  <h4>Ferramentas</h4>
+                  <div class="list-library border p-3">
+                    <p>MySQL Workbench 8</p>
+                    <p>Visual code</p>
+                    <p>Trelo</p>
+                    <p>Figma</p>
+                    <p>Slack</p>
+                    <p>Git hub</p>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <a href="https://github.com/willDevWeb/Eccomerce-LeveLivros" target="_blank" class="btn btn-warning">Repositório remoto</a>
+              </div>
+              <div class="movie-project">
+                <iframe src="https://www.youtube.com/embed/6QOwhAgmY9Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+            </div>
         </div>
       </section>
 
       <section class="module parallax parallax-2">
         <div class="parallax-item container">
-          <h2>Habilidades e metodologias ágeis</h2>
+          <h2>Níveis de hábilidades</h2>
         </div>
       </section>
 
       <section class="module content">
         <div class="container">
           <div class="resume">
-            <div class="skills">
-              <span>Java Script</span>
-              <span>Node js</span>
-              <span>MySQL</span>
-              <span>HTML 5</span>
-              <span>CSS 3</span>
-              <span>BootsTrap</span>
-              <span>API / API-REST</span>
-              <span>MVC</span>
-              <span>CRUD</span>
-              <span>Scrum</span>
-            </div>
-
+            <div class="skills-help">Passe o mause na habilidade para mais detalhes</div>
+            <div class="skills"></div>
+            <div class="skills-desc"></div>
           </div>
         </div>
       </section>
+      <div class="last-section"></div>
 
     </main>
   </div>
   <%- include('partials/footer') %>
+  <script src="/javascripts/home.js"></script>
 </body>
 </html>
