--- a/public/css/home.css
+++ b/public/css/home.css
@@ -8,7 +8,9 @@
     width: 100%;
     margin: 0 auto;
 }
-
+body{
+    position: relative;
+}
 main{
     display: block;
     background-color: var(--bg-main);
@@ -86,44 +88,134 @@ section.module.parallax::after{
 }
 
 /*gallery items config*/
+.box-carousel{
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    background-color: rgb(255, 255, 255) !important;
+}
 
-.gallery{
+.carousel-indicators button{
+    background-color: rgb(12, 12, 12) !important;
+    padding: 5px !important;
+}
+.c-item{
+    background-color: rgba(0,0,0,0);
+    width: 100%;
+    height: 500px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.c-img{
+    width: 100%;    
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.c-img img {
+    border-radius: 15px !important;
+    width: 100%;
+}
+
+/*Description project*/
+.box-language{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
     align-items: center;
+    justify-content: space-evenly;
+    margin: 25px 0;
 }
-.gallery-item{
-    margin: 5px 0;
-    max-width: 400px;
-    max-height: 200px;
-    border: #000 solid 1px;
+.project-description{
+    margin: 150px 0;
 }
-.gallery-item img {
+.project-description p{
+    font-size: 14pt;
+}
+.box-description p {
+    cursor: pointer;
+}
+.project-description{
+    box-shadow: 0 0 15px #000;
+    padding: 15px;
+}
+.centralize{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;    
+}
+.list-library{
+    display: flex;
+    max-width: 600px;
+    flex-wrap: wrap;
+}
+.list-library p {
+    margin-left: 15px;
+}
+
+/*movie project*/
+.movie-project{
+    margin: 100px 0;
+    max-width: 100%;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.movie-project iframe{
+    border-radius: 15px;
     width: 100%;
-    padding: 5px;
+    height: 100%;
 }
 
 /*style skills*/
-.resume{
-    height: 100vh;
+.skills-help{
+    width: 100% ;
+    text-align: end;
 }
 .skills{
-    border: solid 1px #000;
     min-height: 200px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     flex-wrap: wrap;
     padding:15px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.685);
+    border-radius: 15px;
 }
 .skills span{
-    padding: 0 25px;
+    margin: 0 25px;
+    padding: 5px;
+    border-radius: 5px;
     cursor: pointer;
-    border-bottom: rgba(0,0,0,0) solid 1px;
     text-transform: uppercase;
     font-weight: 900;
+    border: solid 1px;
 }
 .skills span:hover{
-    border-bottom: rgba(0,0,0,1) solid 1px;
+    -webkit-transform: scale(1.05);
+}
+
+.skills-desc{
+    padding: 40px 0;
+    transition: all 400ms;
+    min-height: 300px;
+}
+
+/*last configs*/
+.opacity-of{
+    opacity: 0;
+    transition:  opacity 2000ms;
+}
+.opacity-on{
+    opacity: 1;
+}
+.last-section{
+    height: 1px;
+    width: 100%;
 }
