--- a/public/css/home.css
+++ b/public/css/home.css
@@ -205,6 +205,8 @@ section.module.parallax::after{
     padding: 40px 0;
     transition: all 400ms;
     min-height: 300px;
+    font-size: 14pt;
+    text-align: justify;
 }
 
 /*last configs*/
