--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -148,6 +148,10 @@
         </div>
       </section>
       <div class="last-section"></div>
+      <div class="text-center p-5">
+        <h2>Download CV</h2>
+        <a href="#" target="_blank" class="btn btn-warning">Baixar Curriculo</a>
+      </div>
 
     </main>
   </div>
