--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,17 +1,9 @@
 <header>
   <nav class="dp-menu">
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Projects</a></li>
-      <li><a href="#">Profile</a></li>
-      <li>
-        <a href="#" class="dp-btn">Social media</a>
-        <ul class="dp-nav">
-          <li><a href="#">Linked'n</a></li>
-          <li><a href="#">Git Hub</a></li>
-          <li><a href="#">Instagram</a></li>
-        </ul>
-      </li>
+      <li><a href="https://www.linkedin.com/in/myke-william-836381244/" target="_blank">Linked'n</a></li>
+      <li><a href="https://github.com/willDevWeb" target="_blank">Git Hub</a></li>  
+      <li><a href="https://www.instagram.com/maike_william.97/" target="_blank">Instagram</a></li>
     </ul>
   </nav>
 </header>
