--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -150,7 +150,7 @@
       <div class="last-section"></div>
       <div class="text-center p-5">
         <h2>Download CV</h2>
-        <a href="#" target="_blank" class="btn btn-warning">Baixar Curriculo</a>
+        <a href="https://drive.google.com/file/d/1tricOewrDnPsba_cSQ5tFzCOplenjFaI/view?usp=share_link" target="_blank" class="btn btn-warning">Baixar Curriculo</a>
       </div>
 
     </main>
